--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li>Fecha de Nacimiento: <b>18 de Junio de 1986</b></li>
         <li>Lugar de Nacimiento: <b>Elderslie, Escocia, Reino Unido</b> </li>   
     </ul>
+    <h2>iopjijcvsdov</h2>
     <!-- Segundo Esquema de la lista  -->
     <H2>Formación Académica</H2>
     <ul>
@@ -32,6 +33,8 @@
     </ul>
 
     <footer>© 2021 Miguel Casas | All Rights Reserved</footer>
+
+    
     
 
 
