--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>Fecha de Nacimiento: <b>18 de Junio de 1986</b></li>
         <li>Lugar de Nacimiento: <b>Elderslie, Escocia, Reino Unido</b> </li>   
     </ul>
-    <h3>Modificado</h3>
+    <h3>ModificadoO</h3>
     <!-- Segundo Esquema de la lista  -->
     <H2>Formación Académica</H2>
     <ul>
